--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>de.alexanderwodarz.code</groupId>
     <artifactId>java-core-website</artifactId>
-    <version>1.4.7.2</version>
+    <version>1.4.8</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -49,6 +49,11 @@
     </scm>
 
     <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.11.1</version>
+        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
